# Happy-Little-Students

./: .gitignore  ANSI-color-codes.h  CMakeLists.txt  README.md  carte.c  carte.h  carteCfu.c  carteCfu.h  carteEffetto.c  carteEffetto.h  carteIstantanee.c  carteIstantanee.h  carteOstacolo.c  carteOstacolo.h  costanti.h  estetica.c  estetica.h  input.c  input.h  interfaccia.c  interfaccia.h  letturaFile.c  letturaFile.h  log.c  log.h  main.c  output.c  output.h  salvataggio.c  salvataggio.h  savegame.sav  tipi.h  turno.c  turno.h  utilita.c  utilita.h
